Fix CSS responsive layout bug

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 500px) {
-  .footer {
+  .footerContent {
     flex-direction: column;
     justify-content: left;
   }
